--- a/video-to-oled-art-main/backend/Dockerfile
+++ b/video-to-oled-art-main/backend/Dockerfile
@@ -1,3 +1,4 @@
+# Use Node.js 18 Alpine as base image
 FROM node:18-alpine
 
 # Install FFmpeg and other dependencies
@@ -5,27 +6,30 @@ RUN apk add --no-cache \
     ffmpeg \
     python3 \
     make \
-    g++ \
-    && rm -rf /var/cache/apk/*
+    g++
 
-# Create app directory
+# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production && npm cache clean --force
+RUN npm ci --only=production
 
 # Copy source code
 COPY . .
 
 # Create necessary directories
-RUN mkdir -p uploads temp
+RUN mkdir -p uploads temp logs
 
-# Set permissions
-RUN chown -R node:node /app
-USER node
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nodejs -u 1001
+
+# Change ownership of the app directory
+RUN chown -R nodejs:nodejs /app
+USER nodejs
 
 # Expose port
 EXPOSE 3001
@@ -36,7 +40,3 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 
 # Start the application
 CMD ["npm", "start"]
-
-
-
-
