--- a/video-to-oled-art-main/backend/env.example
+++ b/video-to-oled-art-main/backend/env.example
@@ -6,19 +6,43 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Server Configuration
 PORT=3001
 NODE_ENV=development
+CORS_ORIGIN=http://localhost:5173
 
 # File Upload Configuration
-MAX_FILE_SIZE=50MB
-UPLOAD_PATH=./uploads
-TEMP_PATH=./temp
+UPLOAD_DIR=./uploads
+TEMP_DIR=./temp
+MAX_FILE_SIZE=104857600
+MAX_VIDEO_DURATION=30
 
 # Video Processing Configuration
-MAX_VIDEO_DURATION=30
-MAX_FRAMES=300
 TARGET_FPS=15
+MAX_FRAMES=20
+THRESHOLD=128
 
-# Security
-CORS_ORIGIN=http://localhost:5173
+# FFmpeg Configuration (optional)
+FFMPEG_PATH=/usr/bin/ffmpeg
+FFPROBE_PATH=/usr/bin/ffprobe
+
+# Rate Limiting Configuration
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_MAX_REQUESTS=1000
 
+# Security Configuration
+JWT_SECRET=your_jwt_secret_key
+SESSION_SECRET=your_session_secret_key
+
+# Database Configuration (if using direct PostgreSQL)
+DATABASE_URL=postgresql://username:password@localhost:5432/video_to_oled
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FILE=./logs/app.log
+
+# Monitoring Configuration
+ENABLE_METRICS=true
+METRICS_PORT=9090
+
+# Cleanup Configuration
+CLEANUP_INTERVAL=3600000
+FILE_RETENTION_DAYS=7
+PROCESSED_VIDEO_RETENTION_DAYS=30
