--- a/video-to-oled-art-main/backend/package.json
+++ b/video-to-oled-art-main/backend/package.json
@@ -1,38 +1,64 @@
 {
   "name": "video-to-oled-backend",
   "version": "1.0.0",
-  "description": "Backend for Video to Arduino OLED Converter",
+  "description": "Backend service for converting videos to Arduino OLED code using Supabase and FFmpeg",
   "main": "src/index.js",
-  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "echo 'No build step required'",
+    "build": "echo 'No build step required for Node.js'",
     "test": "jest",
-    "setup": "node scripts/setup-supabase.js",
-    "docker:build": "docker build -t video-to-oled-backend .",
-    "docker:run": "docker run -p 3001:3001 --env-file .env video-to-oled-backend",
-    "docker:compose": "docker-compose up -d",
-    "docker:compose:down": "docker-compose down"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "cleanup": "node scripts/cleanup.js",
+    "db:migrate": "node scripts/migrate.js",
+    "db:seed": "node scripts/seed.js"
   },
+  "keywords": [
+    "arduino",
+    "oled",
+    "video",
+    "conversion",
+    "supabase",
+    "ffmpeg",
+    "api"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.38.0",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "uuid": "^9.0.1",
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.1.5",
     "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "multer": "^1.4.5-lts.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "uuid": "^9.0.1",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.55.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/video-to-oled-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/video-to-oled-backend/issues"
+  },
+  "homepage": "https://github.com/your-username/video-to-oled-backend#readme"
 }
